# pdf-structured-output-server

./: CONVENTIONS.md  CURRENT_IMPLEMENTATION.md  README.md  flake.nix  pyproject.toml
models/: models.py
src/product_enrichment/: __init__.py  main.py  models.py  pdf_processor.py  product_feed_generator.py  server.py
