[project]
name = "product-enrichment"
version = "0.1.0"
description = "Process PDF documents and generate product feed CSV using BookWyrm API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bookwyrm>=0.1.19",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
product-enrichment = "product_enrichment.main:app"
